--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
     <title>呷蝦咪</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/screen1280.css">
     <link rel="stylesheet" type="text/css" href="css/screen768.css">
     <link rel="stylesheet" type="text/css" href="css/screen320.css">
     <script src="js/jQuery.js"></script>
@@ -30,20 +30,15 @@
     <header>
         <div id="second_div">
             <div class="img_box">
-                <img src="img/L - 1920/banner1_1920_設計圖.jpg">
-                <img src="img/L - 1920/banner2_1920_設計圖.jpg">
-                <img src="img/L - 1920/banner3_1920_設計圖.jpg">
+                <img src="img/L - 1920/banner1_1920_設計圖.png">
+                <img src="img/L - 1920/banner2_1920_設計圖.png">
+                <img src="img/L - 1920/banner3_1920_設計圖.png">
             </div>
             <ul class="ul5">
                 <li></li>
                 <li></li>
                 <li></li>
             </ul>
-        </div>
-        <div class="img_box1">
-            <a href="#"><img src="img/L - 1920/bannerbutton.png"></a>
-            <a href="#"><img src="img/L - 1920/bannerbutton.png"></a>
-            <a href="#"><img src="img/L - 1920/bannerbutton.png"></a>
         </div>
     </header>
     <article class="articlelayout">
